--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,19 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 string(CONCAT CMAKE_CXX_FLAGS
-             "${CMAKE_CXX_FLAGS}"
-             " -Wall -Wextra"
-             " -Wfloat-conversion -Wsign-conversion"
-             " -Wshadow -Wduplicated-cond"
-             " -Wduplicated-branches -Wlogical-op"
-             " -Wnull-dereference -Wuseless-cast"
-             " -Wformat=2 -fPIC")
+  "${CMAKE_CXX_FLAGS}"
+  " -Wall -Wextra"
+  " -Wfloat-conversion -Wsign-conversion"
+  " -Wshadow -Wduplicated-cond"
+  " -Wduplicated-branches -Wlogical-op"
+  " -Wnull-dereference -Wuseless-cast"
+  " -Wformat=2 -fPIC")
 
 option(MIDX_BUILD_TESTS "Whether to build tests" FALSE)
 option(MIDX_PYTHON_BINDINGS "Whether to generate python bindings" FALSE)
 
 set(BUILD_TESTING FALSE)
+set(SQLITECPP_RUN_CPPLINT FALSE)
 
 # SqliteCpp
 add_subdirectory("deps/SQLiteCpp")
@@ -26,13 +27,17 @@ add_subdirectory("deps/SQLiteCpp")
 #add_subdirectory("deps/taglib-1.13/")
 find_package(taglib REQUIRED)
 
-# pybind11
-include_directories("deps/pybind11/include")
-
-# spdlog
-include_directories("deps/spdlog/include")
+set(MIDX_INCLUDE_DIRS
+  "${CMAKE_CURRENT_SOURCE_DIR}/src"
+  "${CMAKE_CURRENT_SOURCE_DIR}/deps/spdlog/include"
+  "${CMAKE_CURRENT_SOURCE_DIR}/deps/SQLiteCpp/include"
+  "${CMAKE_CURRENT_SOURCE_DIR}/deps/pybind11/include"
+)
+include_directories(${MIDX_INCLUDE_DIRS})
 
 add_library(Midx STATIC src/midx.cpp)
+set_target_properties(Midx PROPERTIES
+  MIDX_INCLUDE_DIRS "${MIDX_INCLUDE_DIRS}")
 target_link_libraries(Midx
    SQLiteCpp
    tag
